Cambio de nombre

--- a/plantilla/ejemploFactura.html
+++ b/plantilla/ejemploFactura.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="./css/fontello.css">
       <link rel="stylesheet" href="./css/header.css">
       <link rel="stylesheet" href="./css/factura.css">
-    <title>Plantilla</title>
+    <title>Plantillas</title>
 </head>
 
 <header>
